nullaway_error_73bf2d62-9ea3-4a55-b7af-69b3666dce6b.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/MapUtilities.java:244: error: [NullAway] dereferenced expression mapObject.getPolyline() is @Nullable
      return mapObject.getPolyline().getAbsolutePoints(mapObject.getLocation());
                                    ^
    (see http://t.uber.com/nullaway )
